Bug 303841 - message list does not remember its size
Summary: message list does not remember its size
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.9 pre
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-20 10:23 UTC by S. Burmeister
Modified: 2012-07-23 14:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2012-07-20 10:23:43 UTC
If one configures kmail to show the short folder list (left), below it the message list and on the right of both of these the preview pane, the message list does not remember its size.

It always starts small in terms of height, I guess because the folder list tries to display all folders. While this might be ok as default, as soon as the user re-sizes the message list's height, it should be remembered across sessions, i.e. when restarting kmail.

Reproducible: Always
Comment 1 Laurent Montel 2012-07-23 12:03:34 UTC
could you paste a screenshot about your kmail layout pleasE ?
Thanks
Comment 2 Laurent Montel 2012-07-23 14:08:15 UTC
Git commit 43747fb0ffae9e144c350eac0383a44aadf336cb by Montel Laurent.
Committed on 23/07/2012 at 16:05.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 303841 - message list does not remember its size

FIXED-IN: 4.9

M  +9    -8    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/43747fb0ffae9e144c350eac0383a44aadf336cb