Fix Bug 303841 - message list does not remember its size

FIXED-IN: 4.9
BUG: 303841